2011-03-28  Maciej Stachowiak  <mjs@apple.com>

Reviewed by Dan Bernstein.

        Assigning location.path to something that doesn't start with / mangles the authority
        https://bugs.webkit.org/show_bug.cgi?id=57209
        <rdar://problem/9195132>

        Tests: http/tests/uri/assign-path-with-leading-slash.html
               http/tests/uri/assign-path-without-leading-slash.html

        * platform/KURL.cpp:
        (WebCore::KURL::setPath): If the new path does not have a leading slash, add one.
2011-03-28  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Dan Bernstein.

        Assigning location.path to something that doesn't start with / mangles the authority
        https://bugs.webkit.org/show_bug.cgi?id=57209
        <rdar://problem/9195132>

        * http/tests/uri/assign-path-with-leading-slash-expected.txt: Added.
        * http/tests/uri/assign-path-with-leading-slash.html: Added.
        * http/tests/uri/assign-path-without-leading-slash-expected.txt: Added.
        * http/tests/uri/assign-path-without-leading-slash.html: Added.
        * http/tests/uri/resources/assign-path-landing.html: Added.


Canonical link: https://commits.webkit.org/71895@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82093 268f45cc-cd09-0410-ab3c-d52691b4dbfc